# devstack

./: .env.example  README.md  docker-compose.yml  pyproject.toml
agent_stack/: README.md  requirements.txt
agent_stack/core/: initialize.sh  setup.sh  sync_rules.sh  types.py  warp_system.sh
agent_stack/docs/: COMMANDS.md  INSTALLATION.md  PROTOCOLS.md  SYSTEM_ARCHITECTURE.md  USAGE.md
devstack/tasks/: task-manager.sh  tasks.json
logs/Analyst/: messages_20250601_135931.json  messages_20250601_140001.json  messages_20250601_140008.json  messages_20250601_140016.json  messages_20250601_141501.json  messages_20250601_142002.json  messages_20250601_143002.json
logs/Coder/: messages_20250601_135931.json  messages_20250601_135959.json  messages_20250601_140008.json  messages_20250601_141002.json  messages_20250601_141501.json  messages_20250601_142002.json
logs/Documenter/: messages_20250601_135931.json  messages_20250601_135959.json  messages_20250601_140008.json  messages_20250601_141002.json  messages_20250601_141501.json  messages_20250601_143501.json
logs/Git_Manager/: messages_20250601_135931.json  messages_20250601_140001.json  messages_20250601_140008.json  messages_20250601_141002.json  messages_20250601_141501.json  messages_20250601_142002.json
logs/Overseer/: messages_20250601_135931.json  messages_20250601_135959.json  messages_20250601_140008.json  messages_20250601_140016.json  messages_20250601_141501.json  messages_20250601_142002.json
scripts/: init.sh  ssl-setup.sh  xdebug-toggle.sh
services/nginx/: Dockerfile
tasks/: QUICKSTART.md  TASK_SUMMARY.md  dependency_map.yml  implementation_phases.yml  priority_levels.yml  status_tracking.yml  task_manager.sh
tests/: conftest.py
(+82 files in other folders)
